LayoutTests:

Reviewed by Geoff.

        Tests for http://bugs.webkit.org/show_bug.cgi?id=10782
        Classes should not override JSObject::toString(ExecState *)

        - Adds a new test to test overriding toString and valueOf for
          multiple objects.
        - Update tests to reflect the correction of the toString architecture.

        * editing/selection/getRangeAt-expected.txt:
        * fast/dom/Window/atob-btoa-expected.txt:
        * fast/js/toString-and-valueOf-override-expected.txt: Added.
        * fast/js/toString-and-valueOf-override.html: Added.

WebCore:

        Reviewed by Geoff.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=10782
        Classes should not override JSObject::toString(ExecState *)

        Remove all overrides of JSObject::toString and JSObject::toPrimitive
        which is a bad practice.  Instead, if an object, like the
        HTMLAnchorElement, needs to override to toString, it should add
        a function to the JS object which will be called when needed.  This
        also allows developers to override toString and valueOf from within JS.

        Test: fast/js/toString-and-valueOf-override.html

        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSHTMLAnchorElementCustom.cpp: Removed.
        * bindings/js/kjs_binding.cpp:
        * bindings/js/kjs_binding.h:
        * bindings/js/kjs_dom.cpp:
        * bindings/js/kjs_dom.h:
        * bindings/js/kjs_domnode.h:
        * bindings/js/kjs_window.cpp:
        (KJS::History::):
        (KJS::LocationFunc::callAsFunction):
        (KJS::SelectionFunc::callAsFunction):
        * bindings/js/kjs_window.h:
        * bindings/scripts/CodeGeneratorJS.pm:
        * html/HTMLAnchorElement.cpp:
        (WebCore::HTMLAnchorElement::toString):
        * html/HTMLAnchorElement.h:
        * html/HTMLAnchorElement.idl:



Canonical link: https://commits.webkit.org/18286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21927 268f45cc-cd09-0410-ab3c-d52691b4dbfc