WebCore/html/HTMLAnchorElement.cpp
@@ -1,6 +1,4 @@
-/**
- * This file is part of the DOM implementation for KDE.
- *
+/*
  * Copyright (C) 1999 Lars Knoll (knoll@kde.org)
  *           (C) 1999 Antti Koivisto (koivisto@kde.org)
  *           (C) 2000 Simon Hausmann <hausmann@kde.org>
@@ -456,6 +454,11 @@ String HTMLAnchorElement::search() const
 String HTMLAnchorElement::text() const
 {
     return innerText();
+}
+
+String HTMLAnchorElement::toString() const
+{
+    return href();
 }
 
 bool HTMLAnchorElement::isLiveLink() const
