WebCore/bindings/scripts/CodeGeneratorJS.pm
@@ -360,11 +360,6 @@ sub GenerateHeader
         push(@headerContent, "    virtual void mark();\n\n");
     }
 
-    # Custom toString function
-    if ($dataNode->extendedAttributes->{"CustomToString"}) {
-        push(@headerContent, "    virtual KJS::UString toString(KJS::ExecState*) const;\n\n");
-    }
-
     # Custom pushEventHandlerScope function
     if ($dataNode->extendedAttributes->{"CustomPushEventHandlerScope"}) {
         push(@headerContent, "    virtual void pushEventHandlerScope(KJS::ExecState*, KJS::ScopeChain&) const;\n\n");
